# ccl-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  perf_bench.sh
doc/: blog.md  ccl.md  claude_ref.md  deepwiki_overview.md  parser_logic.md  todo.md
examples/: generate_large_ccl.rs
src/: key_val.rs  lib.rs  main.rs  model.rs  monoid.rs  parser.rs  string_utils.rs
tests/: cli.rs  empty.rs  empty_and_errors.rs  errors.rs  indent.rs  monoid_isomorphism_property.rs  multiple.rs  multiple_key_value.rs  nested.rs  nested_values.rs  single_key_value.rs  stress.rs  stress_test.rs
tests/fixtures/: sample1.ccl  sample2.ccl
tests/property/: monoid.rs  monoid_isomorphism.rs
