[package]
name = "ccl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
proptest = "1.7.0"
rstest = "0.25.0"

[profile.dev.package]
insta.opt-level = 3
