[package]
name = "ccl-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of Categorical Configuration Language (CCL)"
license = "MIT"
repository = "https://github.com/hon-gyu/ccl-rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.1", features = ["yaml"] }
predicates = "3.1.3"
proptest = "1.7.0"
rstest = "0.25.0"

[profile.dev.package]
insta.opt-level = 3
